# todolist

server/: .env  Cargo.toml
server/migrations/2022-12-11-202601_create_tasks/: up.sql
server/src/: lib.rs  main.rs  models.rs  schema.rs
server/src/controllers/: task.rs
server/src/services/: task.rs
